# MCP-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
