[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.7.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = [
    "mcp-client",
]
